--- a/Глава_2_1_Архитектура.md
+++ b/Глава_2_1_Архитектура.md
@@ -24,10 +24,10 @@ graph TB
     
     subgraph "Уровень бизнес-логики"
         NextJS[Next.js Server]
-        AuthAPI[/api/auth/*]
-        TasksAPI[/api/tasks/*]
-        UsersAPI[/api/users/*]
-        StatusAPI[/api/statuses/*]
+        AuthAPI["API: /api/auth/*"]
+        TasksAPI["API: /api/tasks/*"]
+        UsersAPI["API: /api/users/*"]
+        StatusAPI["API: /api/statuses/*"]
         Middleware[Middleware аутентификации]
     end
     
