--- a/Глава_2_1_Архитектура.md
+++ b/Глава_2_1_Архитектура.md
@@ -157,10 +157,10 @@ graph LR
     end
     
     subgraph "API слой"
-        A1[/api/auth]
-        A2[/api/tasks]
-        A3[/api/users]
-        A4[/api/statuses]
+        A1["API: /api/auth"]
+        A2["API: /api/tasks"]
+        A3["API: /api/users"]
+        A4["API: /api/statuses"]
     end
     
     subgraph "Слой данных"
@@ -172,11 +172,11 @@ graph LR
     C1 --> C2
     C2 --> C3
     
-    C3 -->|POST /api/auth/login| A1
-    C3 -->|GET /api/tasks| A2
-    C3 -->|POST /api/tasks| A2
-    C3 -->|GET /api/users| A3
-    C3 -->|GET /api/statuses| A4
+    C3 -->|"POST /api/auth/login"| A1
+    C3 -->|"GET /api/tasks"| A2
+    C3 -->|"POST /api/tasks"| A2
+    C3 -->|"GET /api/users"| A3
+    C3 -->|"GET /api/statuses"| A4
     
     A1 --> D1
     A2 --> D1
